--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+argon2-cffi-19.1.0
 asn1crypto==0.24.0
 bleach==3.0.2
 blessings==1.7
-bpython==0.17.1
 certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
@@ -14,9 +14,9 @@ idna==2.7
 ipaddress==1.0.22
 lxml==4.2.5
 miscreant==0.3.0
-pkg-resources==0.0.0
 pycparser==2.19
 Pygments==2.3.0
+PyNaCl==1.3.0
 requests==2.20.1
 six==1.11.0
 typing==3.6.6
